src/objects/loan__Investor_Tax_Configuration__c.object
<CustomObject>
    <fields>
        <fullName>loan__Bank__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Bank</label>
        <referenceTo>loan__Bank__c</referenceTo>
        <relationshipLabel>Investor Tax Configurations</relationshipLabel>
        <relationshipName>Investor_Tax_Configurations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>loan__Income_Type__c</fullName>
        <label>Income Type</label>
        <picklist>
            <picklistValues>
                <fullName>Interest Income</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fees Income</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Entire Income</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>loan__Investor_Type__c</fullName>
        <label>Investor Type</label>
        <picklist>
            <picklistValues>
                <fullName>Individual</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Commercial</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>loan__Tax_Calculation_Method__c</fullName>
        <label>Tax Calculation Method</label>
        <picklist>
            <picklistValues>
                <fullName>Custom</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Default</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>loan__Tax_Name__c</fullName>
        <label>Tax Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>loan__Tax_Percentage__c</fullName>
        <label>Tax Percentage</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>loan__Vat_Percentage__c</fullName>
        <label>Vat Percentage</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Investor Tax Configuration</label>
    <listViews>
        <fullName>loan__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>Tax-{0000}</displayFormat>
        <label>Investor Tax Configuration Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Investor Tax Configurations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>loan__Tax_percentage_check</fullName>
        <active>true</active>
        <errorConditionFormula>loan__Tax_Percentage__c &lt; 0 || loan__Tax_Percentage__c &gt; 100</errorConditionFormula>
        <errorMessage>The tax percentage must lie between 0 and 100.</errorMessage>
    </validationRules>
</CustomObject>